fix(compare): refactor comparison slider to use clip-path to support cropped and small images

--- a/src/app/image-uploader/comparison-modal/comparison-modal.component.scss
+++ b/src/app/image-uploader/comparison-modal/comparison-modal.component.scss
@@ -99,10 +99,6 @@
   .compressed {
     z-index: 2;
     overflow: hidden;
-    img {
-      width: 1000px;
-      max-width: none;
-    }
   }
 
   .compressed img,
